[tool.poetry]
name = "exist-client"
version = "0.1.0"
description = ""
authors = ["Ilya Nekhay <nekhayiv@gmail.com>"]
readme = "README.md"
packages = [{include = "exist_client", from = "src"}]


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
# Code management
pre-commit = "*"

# Testing
pytest = "*"
pytest-cov = "*"
commitizen = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=src --cov-report html --cov-report xml --cov-config=.coveragerc"
